# Flappy_Bird

./: .clang-format  .gitignore  CMakeLists.txt
include/: bird.hpp  constants.hpp  pipe.hpp  score.hpp
src/: bird.cpp  main.cpp  pipe.cpp  score.cpp
